--- a/src/指南/地点/中心工业区/README.me
+++ b/src/指南/地点/中心工业区/README.me
@@ -2,5 +2,11 @@
 author:AnnaNo
 ---
 
-## 基本信息
+## 中心工业区
+
+### 基本信息
+
+* **位置**: 中心工业区 (x = 42, z = 239, dim = overworld)
+* **大小**：20区块 * 20区块
+* **时间**：约2022年10月
 
